Combined written and test into test.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
-Make timer observant, and TypingTestController observer.
-Better caret graphics, and combine written and test.
+Better caret graphics.
 Colors Background:blue, text:white, correct text: black
 Typing test stats. TypingTest can make TypingTestStats object.
 Saving stats.
 Graphing stats, means, PBs
+
+DONE:
+Make timer observant, and TypingTestController observer.
+Combine written and test.
