--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@
 Typing test stats. TypingTest can make TypingTestStats object.
 Saving stats.
 Graphing stats, means, PBs
+CSS
 
 DONE:
 Make timer observant, and TypingTestController observer.
